--- a/css/menikah.css
+++ b/css/menikah.css
@@ -112,6 +112,7 @@ html {
   color: black;
   font-family: "Raleway", sans-serif;
   min-height: 100vh; /* Ensures the hero section covers the full viewport height */
+  display: flex;
 }
 
 .hero2 {
@@ -124,6 +125,7 @@ html {
   box-shadow: inset 0 3px 6px rgb(0 0 0 / 16%), 0 3px 6px rgb(0 0 0 / 23%);
   font-family: "Raleway", sans-serif;
   min-height: 100vh; /* Ensures the hero section covers the full viewport height */
+  display: flex;
 }
 
 .hero .title {
