--- a/css/menikah.css
+++ b/css/menikah.css
@@ -203,7 +203,7 @@ margin-bottom: 500px; /* Atur margin bawah */
   top: 10%; /* Sesuaikan dengan posisi yang diinginkan */
   left: 50%;
   transform: translateX(-50%);
-  margin-top: 0;
+  margin-top: 12px;
   color: black;
   font-size: 1.3rem;
   font-weight: bold;
